# Excavator_real_stack

./: .env.example  .gitignore  README.md  environment.yml  requirements.txt
bridge/: CMakeLists.txt  README.md
bridge/src/: excavator_real_bridge.cpp
configs/: README.md  deploy_network.yaml
configs/ros2_dds/: cyclonedds_multihost.xml  cyclonedds_multihost_peers.xml.in
control/: .gitignore  CMakeLists.txt  UPSTREAM.md
control/config/: joint_pid.yaml
control/include/excavator_api/: excavator_control.hpp  excavator_receive.hpp  types.hpp
control/python/: excavator_api_tcp_server.py
control/setup/: setup_can.sh
control/src/can/: excavator_canlib.cpp  imu_canlib.cpp
control/src/can/internal/: excavator_canlib.hpp  imu_canlib.hpp
control/src/excavator/: excavator_client.cpp  excavator_comm.cpp  excavator_control.cpp  excavator_converter.cpp  excavator_imu_driver.cpp  excavator_motor_driver.cpp
control/src/excavator/internal/: excavator_client.hpp  excavator_communication.hpp  excavator_control.hpp  excavator_converter.hpp  excavator_data_type.hpp  excavator_imu_driver.hpp  excavator_motor_driver.hpp  excavator_state_channel.hpp
control/src/excavator_api/: excavator_control.cpp  excavator_receive.cpp  excavator_runtime.cpp  excavator_runtime.hpp
control/src/hal/: abstract_type.hpp  communication_interface.hpp  converter_interface.hpp  data_types.hpp  driver_interface.hpp  state_interface.hpp
control/tools/: candump_capture_can1_201_204.py  candump_capture_ids.py  excavator_api_tcp_client.cpp  plot_joint_ref_resp.py  tcp_demo_log_utils.hpp
docs/: dev_yxc_bugfix_report.md  dev_yxc_changelog.md  real_machine_bringup_checklist.md  realworld_host_slave_runbook.md
ros2_bridge/: README.md
ros2_bridge/excavator_bridge_gateway/: __init__.py  __main__.py  fpv_shm.py  fpv_subscriber_node.py  gateway_server.py  host_fpv_republisher_node.py
ros2_bridge/excavator_ros2_bridge/: CMakeLists.txt  package.xml
ros2_bridge/excavator_ros2_bridge/config/: fpv_subscriber.yaml  orbbec_fpv.yaml
ros2_bridge/excavator_ros2_bridge/launch/: fpv_image_subscriber.launch.py  fpv_subscriber_with_rqt.launch.py  host_fpv_rqt.launch.py  orbbec_fpv_camera.launch.py
ros2_bridge/excavator_ros2_bridge/src/: fpv_image_subscriber_node.cpp
ros2_bridge/fpv_frame_store/: CMakeLists.txt  fpv_frame_store.cpp  fpv_frame_store.hpp  fpv_read_state.cpp  fpv_read_state.hpp
scripts/: README.md  can_probe.py  check_target_prereqs.sh  excavator_deploy_network.sh  mount_slave_dataset.sh  one_axis_bringup.py  record_host_gamepad_slave_disk.sh  ros2_fpv_env.sh  ros2_multihost_env.sh  ros2_topic_echo_multihost.sh  setup_env.sh  smoke_bridge_protocol.py  smoke_real_bridge.sh  source_excavator_ros_ws.sh  source_ros_stack.sh  start_bridge_gateway.sh  start_fpv_image_subscriber.sh  start_fpv_subscriber_py.sh  start_host_fpv_rqt.sh  start_orbbec_fpv_camera.sh  umount_slave_dataset.sh
testbed/: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
testbed/docs/: realworld_v1_plan.md
testbed/scripts/: gamepad_probe.py
testbed/testbed/: __init__.py
testbed/testbed/actions/: __init__.py  base.py  gamepad.py  keyboard.py  oem_remote.py  smoothing.py
testbed/testbed/backends/: __init__.py  base.py
testbed/testbed/backends/real/: __init__.py  action_pump.py  backend.py  bridge.py  bridge_protocol.py  bridge_server.py  bridge_socket.py  contracts.py  control.py  excavator_api.py  ros_can.py  state.py  sync.py
testbed/testbed/cli/: bridge_mock_server.py  data_side.py  dataset_qc.py  dataset_videos.py  record_real.py  train.py
testbed/testbed/configs/: README.md  __init__.py  act_real_v1.yaml  schema.py  teleop_real_v1.yaml
testbed/testbed/data/: __init__.py  dataset.py  hdf5_io.py  qc.py  recorder.py  schema.py
testbed/testbed/policies/: __init__.py  base.py
testbed/testbed/policies/act/: __init__.py  adapter.py  trainer.py
testbed/testbed/policies/act/detr/: main.py
testbed/testbed/policies/act/detr/models/: backbone.py  detr_vae.py  position_encoding.py
testbed/testbed/policies/diffusion/: __init__.py  adapter.py
testbed/testbed/policies/dummy/: __init__.py  adapter.py
testbed/testbed/runtime/: _train.py  guard.py  run_metadata.py  runner.py
testbed/testbed/state/: __init__.py  state_interface.py
testbed/testbed/tasks/: __init__.py
testbed/tests/: test_action_smoothing.py  test_realworld_v1.py
testbed/tools/: bridge_mock_server.py
