<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>excavator_ros2_bridge</name>
  <version>0.1.0</version>
  <description>Orbbec FPV camera launch and compressed image subscriber for Excavator_real_stack.</description>
  <maintainer email="dev@example.com">Excavator Real Stack</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>orbbec_camera</depend>

  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
